--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#795e72</color>
+    <color name="colorPrimaryDark">#f18f4818</color>
+    <color name="colorAccent">#f18f4818</color>
+    <color name="colorSearch">#c79832</color>
+    <color name="colorCardBG">#e9e8dc</color>
+    <color name="colorBG">#ffffff</color>
+
+    <color name="colorBgLight">#dfffffff</color>
+    <color name="colorPink">#ffbebe</color>
 </resources>
