--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -44,6 +44,12 @@
             app:search_hint="Book name"
             app:search_hint_color="@color/colorPrimary"
             />
+        <Spinner
+            android:id="@+id/searchItemSpinner"
+            android:entries="@array/search_catagory_array"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </Spinner>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
