--- a/app/src/main/res/layout/exisitng_booklist_recyclerview.xml
+++ b/app/src/main/res/layout/exisitng_booklist_recyclerview.xml
@@ -7,13 +7,13 @@
     android:layout_height="150dp">
 
             <TextView
-                android:id="@+id/bookTitle"
+                android:id="@+id/listName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textStyle="bold"
                 android:textSize="30dp"
-                android:text="TITLE" />
+                android:text="Name" />
 
     <View
         android:layout_width="match_parent"
