--- a/app/src/main/res/layout/activity_all_books.xml
+++ b/app/src/main/res/layout/activity_all_books.xml
@@ -27,6 +27,24 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <Spinner
+    android:layout_gravity="center"
+    android:id="@+id/allbooksfilter_spinner"
+    android:padding="20dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:entries="@array/filterbooksarray"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Filter"
+        android:id="@+id/spinnerselectbtn"
+        android:layout_marginBottom="10dp"
+        />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/all_books_recyclerView"
         android:elevation="5dp"
