--- a/app/src/main/res/layout/activity_add_bookmark.xml
+++ b/app/src/main/res/layout/activity_add_bookmark.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -5,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SignupActivity">
+    tools:context=".AddToExistingBooklist">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -19,18 +20,27 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Wish List"
+            android:text="Existing Booklists"
             android:textSize="40dp"
             android:fontFamily="@font/justanotherhand"
             />
 
     </android.support.v7.widget.Toolbar>
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/public_booklist_recyclerview"
-        android:elevation="5dp"
-        android:layout_marginBottom="5dp"
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:hint="Enter page number"
+        android:id="@+id/bookmarkTextid"
+        />
+
+
+    <Button
+        android:layout_gravity="center"
+        android:text="Add Bookmark"
+        android:id="@+id/bookmarkBtn"
+        android:background="@drawable/round_corner_bg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
