--- a/app/src/main/res/layout/activity_become_seller.xml
+++ b/app/src/main/res/layout/activity_become_seller.xml
@@ -28,7 +28,7 @@
 
     <EditText
         android:layout_width="200dp"
-        android:layout_height="25dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
         android:id="@+id/sellerPriceText"
         android:background="@drawable/round_corner_bg1"
@@ -43,6 +43,7 @@
         android:text="Set Price"
         android:layout_marginTop="15dp"
         android:id="@+id/setPricebtn"
+        android:background="@drawable/round_corner_bg"
         />
 
 
