--- a/app/src/main/res/layout/activity_book_profile.xml
+++ b/app/src/main/res/layout/activity_book_profile.xml
@@ -62,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 >
 
                 <TextView
@@ -80,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="17dp"
                     android:textStyle="bold"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="5dp"
                     android:text="AUTHOR" />
                 <TextView
                     android:id="@+id/bookCategory"
@@ -89,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="17dp"
                     android:textStyle="bold"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="5dp"
                     android:text="Category" />
                 <TextView
                     android:id="@+id/bookPublisher"
@@ -98,9 +98,26 @@
                     android:layout_height="wrap_content"
                     android:textSize="17dp"
                     android:textStyle="bold"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="5dp"
                     android:text="Publisher" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Rating: "
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="rate"
+                            android:id="@+id/bookRating"
+                            />
 
+                    </LinearLayout>
 
 
                 <LinearLayout
