--- a/app/src/main/res/layout/requestedbooks_recyclerview.xml
+++ b/app/src/main/res/layout/requestedbooks_recyclerview.xml
@@ -104,6 +104,28 @@
             />
 
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
+    <LinearLayout
+        android:id="@+id/returnLinearLayout"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/returnTextView"
+            android:text="To Return: "
+            android:padding="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/returnEditText"
+            android:visibility="gone"
+            android:hint="Enter dd mm yyyy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -135,7 +157,6 @@
             android:textColor="@android:color/holo_red_dark"
             android:background="@android:color/transparent"
             />
-
 
     </LinearLayout>
 
