--- a/app/src/main/res/layout/request_recyclerview.xml
+++ b/app/src/main/res/layout/request_recyclerview.xml
@@ -105,6 +105,28 @@
             />
 
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/returnTextView"
+            android:text="To Return: "
+            android:padding="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/returnEditText"
+            android:visibility="gone"
+            android:hint="Enter dd mm yyyy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
